# fot-save-edit

./: .gitignore  Cargo.toml  save.cam
src/: codec.rs  decode.rs  files.rs  lib.rs  main.rs  save.rs
src/codec/: format.rs  primitive.rs  sections.rs  shared.rs  stream.rs
src/codec/sections/: campaign.rs  campaign_save.rs  entity_file.rs  esh.rs  saveh.rs  sgd.rs  ssg.rs  world.rs  world_zone.rs  zar.rs
src/decode/: error.rs  primitive.rs  sections.rs  shared.rs  stream.rs
src/decode/campaign_save/: mod.rs
src/decode/saveh/: mod.rs
src/decode/sections/: campaign_save.rs  entity_file.rs  esh.rs  saveh.rs  sdg.rs  sgd.rs  ssg.rs  world.rs  world_zone.rs
src/files/: cam.rs  sav.rs
