[package]
name = "fot-save-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
deflate = "1.0.0"
flate2 = "1.0.27"
memmem = { version = "0.1.1" }
byteorder = { version = "1.4.3" }
widestring = "1.0.2"
thiserror = "1.0.39"
derive-debug = "0.1.2"
encoding_rs = "0.8.33"