[package]
name = "fot_codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
flate2 = { git = "https://github.com/rust-lang/flate2-rs.git", rev = "f285e9abac98aa4f0a15d2e79993a261f166056c" }
byteorder = { version = "1.4.3" }
thiserror = "1.0.39"
derive-debug = "0.1.2"
encoding_rs = "0.8.33"